[package]
    name = "crystalsoft-utils"
    description = "Common Rust utilities used in CrystalSoft projects"
    version = "0.1.0"
    authors = ["Emulator000 <emulator@hotmail.it>"]
    edition = "2018"
    readme = "README.md"
    repository = "https://github.com/CrystalSoft/rust-utils"
    license = "GPL-3.0"
    keywords = ["crystalsoft", "utility"]

[dependencies]
